@@ -59,7 +59,7 @@
 #endif
 
 #define FCEU_VERSION_NUMERIC 21040
-#define FCEU_VERSION_STRING "2.1.5 interim" FCEU_SUBVERSION_STRING FCEU_FEATURE_STRING FCEU_COMPILER
+#define FCEU_VERSION_STRING "2.1.4a" /*FCEU_SUBVERSION_STRING FCEU_FEATURE_STRING FCEU_COMPILER*/
 #define FCEU_NAME_AND_VERSION FCEU_NAME " " FCEU_VERSION_STRING
 
 #endif
