@@ -77,9 +77,9 @@
 		
 		<h3>Download</h3>
 		<ul>
-			<li><a href="http://sourceforge.net/projects/fceultra/files/Binaries/2.1.4/fceux-2.1.4-win32.zip/download">FCEUX 2.1.4 win32 Binary</a></li>
-			<li><a href="http://sourceforge.net/projects/fceultra/files/Binaries/2.1.4/fceux-2.1.4-win32-Win200_Win98.zip/download">FCEUX 2.1.4 win32 Binary - Windows 2000/98</a></li>
-			<li><a href="http://sourceforge.net/projects/fceultra/files/Source%20Code/2.1.4%20src/fceux-2.1.4.src.tar.bz2/download">FCEUX 2.1.4 src</a></li>
+			<li><a href="http://sourceforge.net/projects/fceultra/files/Binaries/2.1.4/fceux-2.1.4a-win32.zip/download">FCEUX 2.1.4a win32 Binary</a></li>
+			<li><a href="http://sourceforge.net/projects/fceultra/files/Binaries/2.1.4/fceux-2.1.4a-win32-Win200_Win98.zip/download">FCEUX 2.1.4a win32 Binary - Windows 2000/98</a></li>
+			<li><a href="http://sourceforge.net/projects/fceultra/files/Source%20Code/2.1.4%20src/fceux-2.1.4a.src.tar.bz2/download">FCEUX 2.1.4a src</a></li>
 		</ul>
 		<p>The latest win32 interim build is generally fresh within a day or two.  
 		If you are working with a developer to fix an issue affecting you then this is where you will find your fixed build. </p>
