@@ -36,9 +36,14 @@
 </div>
 <div id="page_content">
 <h1>FCEUX 2.1.4 Release</h1>
-31 May 2010
-<p>
-The 2.1.4 release that fixes some many bugs and adds new features compared to 2.1.3.  In addition it also fixes up the movie code significantly; 
+<p>01 June 2010</p>
+<p>2.1.4 Maintenence Release</p>
+<p>Fixes the following bugs from 2.1.4:<br>
+Fix crash on .fcm convert</br>
+Fix erroneous savestate after movie errors on loadstate during read-only movie playback</p>
+
+<p>31 May 2010</p>
+<p>The 2.1.4 release that fixes some many bugs and adds new features compared to 2.1.3.  In addition it also fixes up the movie code significantly; 
 fixing implementation problems, loading speed, adding new features, and fixing 
 bugs.
 </p>
